fixtures/cs-cmp-01/good/numeric-compare.ts
import crypto from "crypto";

export function checkCount(count: number) {
	return count === 0;
}

void crypto;
