fixtures/cs-cmp-01/bad/property-access-secret.ts
import crypto from "crypto";

export function compareUser(user: { secret: string }, inputSecret: string) {
	return user.secret === inputSecret;
}

void crypto;
